# OGSParaviewSuite

./: .gitignore  .gitmodules  Makefile  README.md  deploy_bit.sea
Colormaps/: OkuboWeiss.json  hcl_purple2blue.json  readme.md
OGSPlugins/: OGSPlugins.cmake  install_plugins
OGSPlugins/MapPlotterView/: CMakeLists.txt  MapPlotterView.cxx  MapPlotterView.h  MapPlotterView.xml  plugin.cmake  readme.md  vtkMapPlotterView.cxx  vtkMapPlotterView.h  vtkSMMapPlotterViewProxy.cxx  vtkSMMapPlotterViewProxy.h
OGSPlugins/OGSAnnotateDateTime/: CMakeLists.txt  OGSAnnotateDateTime.xml  plugin.cmake  readme.md  vtkOGSAnnotateDateTime.cxx  vtkOGSAnnotateDateTime.h
OGSPlugins/OGSCompareVariables/: CMakeLists.txt  OGSCompareVariables.xml  readme.md  vtkOGSCompareVariables.cxx  vtkOGSCompareVariables.h
OGSPlugins/OGSDensity/: CMakeLists.txt  OGSDensity.xml  plugin.cmake  readme.md  vtkOGSDensity.cxx  vtkOGSDensity.h
OGSPlugins/OGSDepthProfile/: CMakeLists.txt  OGSDepthProfile.xml  plugin.cmake  readme.md  vtkOGSDepthProfile.cxx  vtkOGSDepthProfile.h
OGSPlugins/OGSDerivatives/: CMakeLists.txt  OGSDerivatives.xml  plugin.cmake  readme.md  vtkOGSDerivatives.cxx  vtkOGSDerivatives.h  vtkOGSGradient.cxx  vtkOGSGradient.h
OGSPlugins/OGSGradient/: CMakeLists.txt  OGSGradient.xml  plugin.cmake  readme.md  vtkOGSGradient.cxx  vtkOGSGradient.h
OGSPlugins/OGSHovmoeller/: CMakeLists.txt  OGSHovmoeller.xml  plugin.cmake  readme.md  vtkOGSHovmoeller.cxx  vtkOGSHovmoeller.h
OGSPlugins/OGSLambda2Criterion/: CMakeLists.txt  OGSLambda2Criterion.xml  plugin.cmake  readme.md  vtkOGSComputeLambda2Criterion.cxx  vtkOGSComputeLambda2Criterion.h
OGSPlugins/OGSMixingLayerDepth/: CMakeLists.txt  OGSMixingLayerDepth.xml  plugin.cmake  readme.md  vtkOGSMixingLayerDepth.cxx  vtkOGSMixingLayerDepth.h
OGSPlugins/OGSOkuboWeiss/: CMakeLists.txt  OGSOkuboWeiss.xml  plugin.cmake  readme.md  vtkOGSComputeOkuboWeiss.cxx  vtkOGSComputeOkuboWeiss.h  vtkOGSSelectOkuboWeiss.cxx  vtkOGSSelectOkuboWeiss.h
OGSPlugins/OGSOmegaCriterion/: CMakeLists.txt  OGSOmegaCriterion.xml  readme.md  vtkOGSComputeOmegaCriterion.cxx  vtkOGSComputeOmegaCriterion.h
OGSPlugins/OGSPlotViews/: CMakeLists.txt  OGSHovmoellerPlot.cxx  OGSHovmoellerPlot.h  OGSMapPlot.cxx  OGSMapPlot.h  OGSPlotViews.xml  OGSSpaghettiPlot.cxx  OGSSpaghettiPlot.h  OGSVerticalProfilePlot.cxx  OGSVerticalProfilePlot.h  plugin.cmake  readme.md  vtkOGSHovmoellerPlot.cxx  vtkOGSHovmoellerPlot.h  vtkOGSMapPlot.cxx  vtkOGSMapPlot.h  vtkOGSSpaghettiPlot.cxx  vtkOGSSpaghettiPlot.h  vtkOGSVerticalProfilePlot.cxx  vtkOGSVerticalProfilePlot.h  vtkSMOGSHovmoellerPlotProxy.cxx  vtkSMOGSHovmoellerPlotProxy.h  vtkSMOGSMapPlotProxy.cxx  vtkSMOGSMapPlotProxy.h  vtkSMOGSSpaghettiPlotProxy.cxx  vtkSMOGSSpaghettiPlotProxy.h  vtkSMOGSVerticalProfilePlotProxy.cxx  vtkSMOGSVerticalProfilePlotProxy.h
OGSPlugins/OGSPlotViews/python/: Hovmoellerplot.py  mapplot.py  spaghettiplot.py  verticalprofileplot.py
OGSPlugins/OGSQCriterion/: CMakeLists.txt  OGSQCriterion.xml  plugin.cmake  readme.md  vtkOGSComputeQCriterion.cxx  vtkOGSComputeQCriterion.h
OGSPlugins/OGSReader/: CMakeLists.txt  OGS2Paraview  OGSReader.xml  OGSReaderGUI.xml  OGSdefs.h  OGSfile.cpp  OGSmesh.py  plugin.cmake  readme.md  vtkOGSReader.cxx  vtkOGSReader.h
OGSPlugins/OGSRossbyRadius/: CMakeLists.txt  OGSRossbyRadius.xml  plugin.cmake  readme.md  vtkOGSRossbyRadius.cxx  vtkOGSRossbyRadius.h
OGSPlugins/OGSSelectTools/: CMakeLists.txt  OGSLandOutline.xml  OGSSelectTools.xml  plugin.cmake  readme.md  vtkOGSSelectBasin.cxx  vtkOGSSelectBasin.h  vtkOGSSelectCoast.cxx  vtkOGSSelectCoast.h  vtkOGSSelectLand.cxx  vtkOGSSelectLand.h  vtkOGSSelectOkuboWeiss.cxx  vtkOGSSelectPolygon.cxx  vtkOGSSelectPolygon.h  vtkOGSSelectTimePeriod.cxx  vtkOGSSelectTimePeriod.h
OGSPlugins/OGSSpaghetti/: CMakeLists.txt  OGSSpaghetti.xml  plugin.cmake  readme.md  vtkOGSSpaghetti.cxx  vtkOGSSpaghetti.h
OGSPlugins/OGSSpatialStatistics/: CMakeLists.txt  OGSSpatialStatistics.xml  plugin.cmake  readme.md  vtkOGSSpatialStats.cxx  vtkOGSSpatialStats.h  vtkOGSSpatialStatsFromFile.cxx  vtkOGSSpatialStatsFromFile.h
OGSPlugins/OGSSpatialStats/: CMakeLists.txt  OGSSpatialStats.xml  readme.md  vtkOGSSpatialStats.cxx  vtkOGSSpatialStats.h
OGSPlugins/OGSVortexDetection/: CMakeLists.txt  OGSVortexDetection.xml  readme.md  vtkOGSVortexDetection.cxx  vtkOGSVortexDetection.h
OGSPlugins/OGSVortexIndentification/: CMakeLists.txt  OGSVortexIndentification.xml  plugin.cmake  readme.md  vtkOGSComputeLambda2Criterion.cxx  vtkOGSComputeLambda2Criterion.h  vtkOGSComputeOkuboWeiss.cxx  vtkOGSComputeOkuboWeiss.h  vtkOGSComputeOmegaCriterion.cxx  vtkOGSComputeOmegaCriterion.h  vtkOGSComputeQCriterion.cxx  vtkOGSComputeQCriterion.h  vtkOGSComputeRortexCriterion.cxx  vtkOGSComputeRortexCriterion.h
OGSPlugins/OGSWriter/: CMakeLists.txt  OGSWriter.xml  cnpy.cpp  plugin.cmake  readme.md  vtkOGSFieldWriter.cxx  vtkOGSFieldWriter.h  vtkOGSNPZTableWriter.cxx  vtkOGSNPZTableWriter.h  vtkOGSNPZWriter.cxx  vtkOGSNPZWriter.h  vtkOGSNetCDFWriter.cxx  vtkOGSNetCDFWriter.h
superbuild/: env-galileo.sh  env-linux.sh  env-marconi.sh  env-osx.sh  fix_cartopy.sh  fix_openssl_osx.sh  fix_pkgconfig_osx.sh  install_paraview_superbuild.sh  install_paraview_superbuild_osmesa.sh  install_paraview_superbuild_osx.sh  paraview_superbuild_hpc.sh  paraview_superbuild_linux_gen.sh  paraview_superbuild_osx.sh
(+348 files in other folders)
